italian member pin translation

--- a/translations/it/members.json
+++ b/translations/it/members.json
@@ -21,6 +21,7 @@
 		"tags": "Modifica i tag",
 		"description": "Descrizione",
 		"noDescription": "Nessuna descrizione",
+		"isPinned": "Fissa membrə nella parte alta della lista membrɜ",
 		"customFront": "Front personalizzato",
 		"isCustomFront": "Imposta come front personalizzato",
 		"archived": "Archiviatə",
