--- a/translations/it/frontHistory.json
+++ b/translations/it/frontHistory.json
@@ -6,6 +6,7 @@
 		"header": "Modifica voce di front",
 		"member": "Modifica lə membrə a front",
 		"customStatus": "Status personalizzato",
+		"comment": "Commento",
 		"startTime": "Data d'inizio",
 		"endTime": "Data di fine",
 		"removeFromFront": {
