show system description in dashboard

--- a/translations/en/appSettings.json
+++ b/translations/en/appSettings.json
@@ -12,5 +12,6 @@
 	},
 	"behaviorLabel": "Behavior",
 	"view": "Default tab",
+	"showSystemDescriptionInDashboard": "Show system description in dashboard",
 	"defaultFilterLabel": "Default search query for"
 }
