--- a/translations/it/appSettings.json
+++ b/translations/it/appSettings.json
@@ -12,5 +12,6 @@
 	},
 	"behaviorLabel": "Comportamento",
 	"view": "Scheda predefinita",
+	"showSystemDescriptionInDashboard": "Mostra la descrizione del sistema nella dashboard",
 	"defaultFilterLabel": "Ricerca predefinita per"
 }
