show members before custom fronts

--- a/translations/en/appSettings.json
+++ b/translations/en/appSettings.json
@@ -12,6 +12,7 @@
 	},
 	"behaviorLabel": "Behavior",
 	"view": "Default tab",
+	"showMembersBeforeCustomFronts": "Show members before custom fronts",
 	"showSystemDescriptionInDashboard": "Show system description in dashboard",
 	"defaultFilterLabel": "Default search query for"
 }
