--- a/translations/it/appSettings.json
+++ b/translations/it/appSettings.json
@@ -12,6 +12,7 @@
 	},
 	"behaviorLabel": "Comportamento",
 	"view": "Scheda predefinita",
+	"showMembersBeforeCustomFronts": "Mostra membrɜ prima dei fronts personalizzati",
 	"showSystemDescriptionInDashboard": "Mostra la descrizione del sistema nella dashboard",
 	"defaultFilterLabel": "Ricerca predefinita per"
 }
