--- a/translations/en/tagManagement.json
+++ b/translations/en/tagManagement.json
@@ -14,6 +14,7 @@
 		"name": "Tag name",
 		"description": "Tag description",
 		"color": "Tag color",
+		"viewInLists": "View in lists",
 		"type": {
 			"header": "Tag type",
 			"member": "Member",
