"Set as pinned" sounds wonky, and shorten the pin message on member pages

--- a/translations/it/members.json
+++ b/translations/it/members.json
@@ -21,7 +21,7 @@
 		"tags": "Modifica i tag",
 		"description": "Descrizione",
 		"noDescription": "Nessuna descrizione",
-		"isPinned": "Fissa membrə in cima alla lista membrɜ",
+		"isPinned": "Fissa membrə",
 		"customFront": "Front personalizzato",
 		"isCustomFront": "Imposta come front personalizzato",
 		"archived": "Archiviatə",
