--- a/translations/en/members.json
+++ b/translations/en/members.json
@@ -21,7 +21,7 @@
 		"tags": "Edit tags",
 		"description": "Description",
 		"noDescription": "No description",
-		"isPinned": "Pin member on top of the member list",
+		"isPinned": "Pin member",
 		"customFront": "Custom front",
 		"isCustomFront": "Set as custom front",
 		"archived": "Archived",
