Translations update from Codeberg Translate (#38)
Translations update from [Codeberg Translate](https://translate.codeberg.org) for [Ampersand/About](https://translate.codeberg.org/projects/ampersand/about/).

It also includes following components:

* [Ampersand/Import/Export](https://translate.codeberg.org/projects/ampersand/import-export/)

* [Ampersand/Asset Manager](https://translate.codeberg.org/projects/ampersand/asset-manager/)

* [Ampersand/Custom Fields](https://translate.codeberg.org/projects/ampersand/custom-fields/)

* [Ampersand/Tag Management](https://translate.codeberg.org/projects/ampersand/tag-management/)

* [Ampersand/Front History](https://translate.codeberg.org/projects/ampersand/front-history/)

* [Ampersand/Options](https://translate.codeberg.org/projects/ampersand/options/)

* [Ampersand/Reminders](https://translate.codeberg.org/projects/ampersand/reminders/)

* [Ampersand/Onboarding](https://translate.codeberg.org/projects/ampersand/onboarding/)

* [Ampersand/Message Board](https://translate.codeberg.org/projects/ampersand/message-board/)

* [Ampersand/Chats](https://translate.codeberg.org/projects/ampersand/chats/)

* [Ampersand/Accessibility](https://translate.codeberg.org/projects/ampersand/accessibility/)

* [Ampersand/App Settings](https://translate.codeberg.org/projects/ampersand/app-settings/)

* [Ampersand/Journal](https://translate.codeberg.org/projects/ampersand/journal/)

* [Ampersand/Members](https://translate.codeberg.org/projects/ampersand/members/)

* [Ampersand/Other](https://translate.codeberg.org/projects/ampersand/other/)

* [Ampersand/System Settings](https://translate.codeberg.org/projects/ampersand/system-settings/)

* [Ampersand/Dashboard](https://translate.codeberg.org/projects/ampersand/dashboard/)

* [Ampersand/Security](https://translate.codeberg.org/projects/ampersand/security/)

* [Ampersand/Lock](https://translate.codeberg.org/projects/ampersand/lock/)

Current translation status:

![Weblate translation status](

--- a/translations/nl/accessibility.json
+++ b/translations/nl/accessibility.json
@@ -3,5 +3,38 @@
 	"highLegibilityFont": {
 		"title": "Duidelijk leesbaar lettertype",
 		"desc": "Gebruik een duidelijk leesbaar lettertype in plaats van het standaardlettertype van je apparaat"
+	},
+	"highLegibilityFontType": {
+		"atkinson": "Atkinson Hyperlegible",
+		"opendyslexic": "OpenDyslexic",
+		"lexend": "Lexend",
+		"title": "Duidelijk leesbaar lettertype-soort"
+	},
+	"uiVariant": {
+		"title": "UI variant",
+		"auto": "Automatisch",
+		"light": "Licht",
+		"dark": "Donker"
+	},
+	"useMaterialTheming": {
+		"title": "Material Design thema",
+		"desc": "Kleur jouw ervaring op basis van de Material standaard (zou oogvermoeidheid kunnen veroorzaken)"
+	},
+	"useAccentColor": {
+		"title": "Accentkleur",
+		"desc": "Gebruik een aangepaste accentkleur"
+	},
+	"accentColor": {
+		"title": "Kies de accentkleur"
+	},
+	"reducedMotion": {
+		"title": "Verminderde beweging",
+		"desc": "Zet animaties in de app uit"
+	},
+	"fontScale": {
+		"title": "UI grootte"
+	},
+	"chatFontScale": {
+		"title": "Chat UI grootte"
 	}
 }
