fix typo in Italian translation, specify German in German is Deutsch

--- a/translations/it/appSettings.json
+++ b/translations/it/appSettings.json
@@ -12,7 +12,7 @@
 	},
 	"behaviorLabel": "Comportamento",
 	"view": "Scheda predefinita",
-	"showMembersBeforeCustomFronts": "Mostra membrɜ prima dei fronts personalizzati",
+	"showMembersBeforeCustomFronts": "Mostra membrɜ prima dei front personalizzati",
 	"showSystemDescriptionInDashboard": "Mostra la descrizione del sistema nella dashboard",
 	"defaultFilterLabel": "Ricerca predefinita per"
 }
