--- a/translations/it/members.json
+++ b/translations/it/members.json
@@ -3,6 +3,7 @@
 	"searchPlaceholder": "Cerca tra ɜ membrɜ...",
 	"select": "Seleziona unə membrə",
 	"deletedMember": "Membrə eliminatə",
+	"deletedCustomFront": "Front personalizzato eliminato",
 	"actions": {
 		"addToFront": "Aggiungi a front",
 		"setMainFronter": "Imposta come fronter principale",
