Modify date on journal posts

--- a/translations/en/journal.json
+++ b/translations/en/journal.json
@@ -10,6 +10,7 @@
 		"headerAdd": "Add new post",
 		"headerEdit": "Edit post",
 		"author": "Author",
+		"date": "Edit date",
 		"title": "Title",
 		"subtitle": "Subtitle",
 		"body": "Post body",
