--- a/translations/it/journal.json
+++ b/translations/it/journal.json
@@ -10,6 +10,7 @@
 		"headerAdd": "Aggiungi nuovo post",
 		"headerEdit": "Modifica post",
 		"author": "Autorə",
+		"date": "Modifica data",
 		"title": "Titolo",
 		"subtitle": "Sottotitolo",
 		"body": "Corpo del post",
