--- a/translations/it/other.json
+++ b/translations/it/other.json
@@ -4,6 +4,8 @@
 		"inEnglish": "Italian"
 	},
 	"genericDeleteDesc": "Non potrai annullare questa azione!",
+	"addTimestamp": "Aggiungi data e ora",
+	"memberMention": "Menziona unə membrə",
 	"storagePersistence": {
 		"header": "Attenzione",
 		"content": "Ampersand non può immagazzinare i dati in modo persistente sul tuo dispositivo Se sei su Firefox, si prega di dare ad Ampersand il permesso per poterlo fare. Se sei su un browser basato su Chromium (come Chrome, Edge, Opera GX, Vivaldi, ecc...), si prega di installare Ampersand come una web app / aggiungerlo alla schermata home. Se questo messaggio non sparisce, si consideri di fare spesso il backup dei dati dalla sezione Importa/Esporta."
