--- a/translations/en/frontHistory.json
+++ b/translations/en/frontHistory.json
@@ -2,11 +2,16 @@
 	"header": "Front history",
 	"searchPlaceholder": "Search the fronting history...",
 	"currentlyFronting": "Currently fronting",
+	"influencing": "Influencing {{influencedMember}}",
 	"edit": {
 		"header": "Edit fronting entry",
 		"member": "Edit fronting member",
 		"customStatus": "Custom status",
 		"comment": "Comment",
+		"influencing": {
+			"select": "Select a member to influence",
+			"currentlyInfluencing": "Currently influencing"
+		},
 		"startTime": "Start time",
 		"endTime": "End time",
 		"removeFromFront": {
@@ -14,6 +19,7 @@
 			"desc": "You won't be able to undo this action after saving!"
 		},
 		"isMainFronter": "Main fronter",
+		"isLocked": "Lock fronter",
 		"delete": {
 			"title": "Delete fronting entry",
 			"confirm": "Are you sure you want to delete this fronting entry?"
