add ability to hide fronting timer

--- a/translations/en/appSettings.json
+++ b/translations/en/appSettings.json
@@ -14,5 +14,6 @@
 	"view": "Default tab",
 	"showMembersBeforeCustomFronts": "Show members before custom fronts",
 	"showSystemDescriptionInDashboard": "Show system description in dashboard",
+	"hideFrontingTimer": "Hide fronting timer",
 	"defaultFilterLabel": "Default search query for"
 }
