--- a/translations/it/appSettings.json
+++ b/translations/it/appSettings.json
@@ -14,5 +14,6 @@
 	"view": "Scheda predefinita",
 	"showMembersBeforeCustomFronts": "Mostra membrɜ prima dei front personalizzati",
 	"showSystemDescriptionInDashboard": "Mostra la descrizione del sistema nella dashboard",
+	"hideFrontingTimer": "Nascondi il conteggio del tempo a front",
 	"defaultFilterLabel": "Ricerca predefinita per"
 }
