Add Android IPC via binder
For fronting events rn, could expand later

--- a/translations/en/appSettings.json
+++ b/translations/en/appSettings.json
@@ -15,5 +15,6 @@
 	"showMembersBeforeCustomFronts": "Show members before custom fronts",
 	"showSystemDescriptionInDashboard": "Show system description in dashboard",
 	"hideFrontingTimer": "Hide fronting timer",
+		"useIPC": "Send events to other applications",
 	"defaultFilterLabel": "Default search query for"
 }
