--- a/translations/it/appSettings.json
+++ b/translations/it/appSettings.json
@@ -15,5 +15,6 @@
 	"showMembersBeforeCustomFronts": "Mostra membrɜ prima dei front personalizzati",
 	"showSystemDescriptionInDashboard": "Mostra la descrizione del sistema nella dashboard",
 	"hideFrontingTimer": "Nascondi il conteggio del tempo a front",
+	"useIPC": "Invia eventi ad applicazioni terze",
 	"defaultFilterLabel": "Ricerca predefinita per"
 }
