add system font option in high legibility settings
use it only if your system font is more legible to you than other fonts we provide, please

--- a/translations/it/accessibility.json
+++ b/translations/it/accessibility.json
@@ -8,7 +8,8 @@
 		"title": "Famiglia dei font ad alta leggibilità",
 		"atkinson": "Atkinson Hyperlegible",
 		"opendyslexic": "OpenDyslexic",
-		"lexend": "Lexend"
+		"lexend": "Lexend",
+		"system-font": "Font di sistema"
 	},
 	"uiVariant": {
 		"title": "Variante dell'interfaccia",
