--- a/translations/en/accessibility.json
+++ b/translations/en/accessibility.json
@@ -8,7 +8,8 @@
 		"title": "High legibility font family",
 		"atkinson": "Atkinson Hyperlegible",
 		"opendyslexic": "OpenDyslexic",
-		"lexend": "Lexend"
+		"lexend": "Lexend",
+		"system-font": "System Font"
 	},
 	"uiVariant": {
 		"title": "UI variant",
