--- a/translations/ro/frontHistory.json
+++ b/translations/ro/frontHistory.json
@@ -8,10 +8,7 @@
 		"customStatus": "Stare personalizată",
 		"startTime": "De la",
 		"endTime": "Până la",
-		"removeFromFront": {
-			"title": "Eliminați din frunte",
-			"desc": "Nu veți putea anula această acțiune după ce salvați!"
-		},
+		"removeFromFront": "Eliminați din frunte",
 		"isMainFronter": "Fruntaș principal",
 		"delete": {
 			"title": "Ștergeți intrarea în frunte"
