--- a/translations/en/accessibility.json
+++ b/translations/en/accessibility.json
@@ -36,6 +36,9 @@
 		"title": "Disable member covers in list",
 		"desc": "If enabled, members in the main list will also display in a more compact way"
 	},
+	"contrastLevel": {
+		"title": "Contrast level"
+	},
 	"fontScale": {
 		"title": "Font size"
 	},
