count members better, start counting custom fronts as well

--- a/translations/it/systemSettings.json
+++ b/translations/it/systemSettings.json
@@ -3,6 +3,7 @@
 	"systemName": "Nome del sistema",
 	"systemDescription": "Descrizione del sistema",
 	"memberCount": "Numero di membrɜ",
-	"memberCountText": "{{memberCount}} membrɜ, {{archivedMemberCount}} archiviatɜ",
+	"memberCountText": "{{totalMemberCount}} membrə/ɜ, {{memberCount}} attivə/ɜ, {{archivedMemberCount}} archiviatə/ɜ",
+	"customFrontCountText": "{{totalCustomFrontCount}} front personalizzato/i, {{customFrontCount}} attivo/i, {{archivedCustomFrontCount}} archiviato/i",
 	"tapToShow": "Clicca per mostrare"
 }
