--- a/translations/en/systemSettings.json
+++ b/translations/en/systemSettings.json
@@ -3,6 +3,7 @@
 	"systemName": "System name",
 	"systemDescription": "System description",
 	"memberCount": "Member count",
-	"memberCountText": "{{memberCount}} member(s), {{archivedMemberCount}} archived",
+	"memberCountText": "{{totalMemberCount}} member(s), {{memberCount}} active, {{archivedMemberCount}} archived",
+	"customFrontCountText": "{{totalCustomFrontCount}} custom front(s), {{customFrontCount}} active, {{archivedCustomFrontCount}} archived",
 	"tapToShow": "Tap to show"
 }
