--- a/translations/en/frontHistory.json
+++ b/translations/en/frontHistory.json
@@ -10,6 +10,12 @@
 		"member": "Edit fronting member",
 		"customStatus": "Custom status",
 		"comment": "Comment",
+		"presence": {
+			"historyTitle": "Presence history",
+			"lastPresence": "Last it was {{presence}} / 10",
+			"addTitle": "How present are you in a scale from 0 to 10?",
+			"addButton": "Add it to the history"
+		},
 		"influencing": {
 			"select": "Select a member to influence",
 			"currentlyInfluencing": "Currently influencing"
