--- a/translations/en/journal.json
+++ b/translations/en/journal.json
@@ -9,7 +9,7 @@
 		"header": "Post",
 		"headerAdd": "Add new post",
 		"headerEdit": "Edit post",
-		"author": "Author",
+		"author": "Edit author",
 		"date": "Edit date",
 		"title": "Title",
 		"subtitle": "Subtitle",
