--- a/translations/it/journal.json
+++ b/translations/it/journal.json
@@ -9,7 +9,7 @@
 		"header": "Post",
 		"headerAdd": "Aggiungi nuovo post",
 		"headerEdit": "Modifica post",
-		"author": "Autorə",
+		"author": "Modifica autorə",
 		"date": "Modifica data",
 		"title": "Titolo",
 		"subtitle": "Sottotitolo",
