migrate systemSettings to systemEdit

--- a/translations/de/systemSettings.json
+++ b/translations/de/systemSettings.json
@@ -1,8 +1,10 @@
 {
-	"systemName": "Systemname",
-	"systemDescription": "Systembeschreibung",
-	"header": "Systemname und Foto",
-	"memberCount": "Anzahl der Mitglieder",
-	"memberCountText": "{{memberCount}} Mitglied(er), {{archivedMemberCount}} archiviert",
-	"tapToShow": "Antippen zum zeigen"
+	"edit": {
+		"name": "Systemname",
+		"description": "Systembeschreibung",
+		"header": "Systemname und Foto",
+		"memberCount": "Anzahl der Mitglieder",
+		"memberCountText": "{{memberCount}} Mitglied(er), {{archivedMemberCount}} archiviert",
+		"tapToShow": "Antippen zum zeigen"
+	}
 }
