fixes, add wiki link

--- a/translations/en/options.json
+++ b/translations/en/options.json
@@ -1,5 +1,6 @@
 {
 	"header": "Options",
 	"managementLabel": "Management",
-	"settingsLabel": "Settings"
+	"settingsLabel": "Settings",
+	"wikiLink": "How to use?"
 }
