--- a/translations/it/options.json
+++ b/translations/it/options.json
@@ -1,5 +1,6 @@
 {
 	"header": "Opzioni",
 	"managementLabel": "Gestione",
-	"settingsLabel": "Impostazioni"
+	"settingsLabel": "Impostazioni",
+	"wikiLink": "Come si usa?"
 }
